--New Codes Added
Signed-off-by: Mayur Mangal

--- a/src/test/resources/properties/OR.properties
+++ b/src/test/resources/properties/OR.properties
@@ -1,7 +1,11 @@
 bmlBtn=//button[text()='Bank Manager Login']
 
-addCustBtn_CSS=button[ng-click='addCust()']
-firstname_CSS=input[ng-model='fName']
-lastname_XPATH=//input[@ng-model='lName']
-postcode_CSS=input[ng-model='postCd']
-addbtn_CSS=button[type='submit']
+addCustBtn=//button[@ng-click='addCust()']
+firstname=//input[@ng-model='fName']
+lastname=//input[@ng-model='lName']
+postcode=//input[@ng-model='postCd']
+addbtn=//button[@type='submit']
+openAccBtn=//button[@ng-click='openAccount()']
+customerId=//select[@id='userSelect']
+currencyId=//select[@id='currency']
+process=//button[text()='Process']
